completed implement swagger with tags and description
